--- a/src/app/views/analiticas/analiticas.component.html
+++ b/src/app/views/analiticas/analiticas.component.html
@@ -1,1 +1,4 @@
-<p>analiticas works!</p>
+<mat-sidenav-container class="example-container" *ngIf="shouldRun" class="text-black">
+    <mat-sidenav mode="side" opened>Sidenav content</mat-sidenav>
+    <mat-sidenav-content>Main content</mat-sidenav-content>
+  </mat-sidenav-container>
