--- a/src/app/views/inicio/inicio.component.css
+++ b/src/app/views/inicio/inicio.component.css
@@ -19,3 +19,10 @@
     right: 2.8rem;
 }
 
+.mat-fab {
+    position: fixed;
+  bottom: 2rem; /* Ajusta la distancia desde la parte inferior según tus necesidades */
+  left: 2rem;
+  z-index: 1000;
+}
+
