--- a/src/app/views/tienda/tienda.component.html
+++ b/src/app/views/tienda/tienda.component.html
@@ -1,1 +1,32 @@
-<p>tienda works!</p>
+<div class="container">
+
+    <div class="row card-container w-100 d-flex justify-content-around mt-4">
+
+        <mat-card *ngFor="let product of database.data.products" class="col-md-4 text-center bg-white mt-2 mb-2 text-dark"
+            style="width: 18rem;">
+            <h2 class="mb-0">{{product.name}}</h2>
+            <h5>{{product.contenido}}</h5>
+            <div class="d-flex">
+                <img class="card-img-top" src="{{product.image}}" alt="Card image cap" >
+                <div class="benefits">
+                    <h3>Beneficios:</h3>
+                </div>
+            </div>
+
+            <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's
+                    content.</p>
+                <div class="d-flex justify-content-center">
+                    <h6>{{product.price}}</h6>
+                    <h6>{{product.currency}}</h6>
+                </div>
+                <button mat-raised-button class="btn btn-primary mb-1" (click)="addProduct({product, cantidad: 1, priceconjunto: 0})">Añadir al carrito
+                    <mat-icon>add_shopping_cart</mat-icon>
+                </button>
+            </div>
+        </mat-card>
+
+    </div>
+
+</div>
