--- a/src/app/views/nosotros/nosotros.component.html
+++ b/src/app/views/nosotros/nosotros.component.html
@@ -1,1 +1,27 @@
-<p>nosotros works!</p>
+<div class="container">
+    <div class="w-100 d-flex ">
+        <h2 class="titulo">Nosotros</h2>
+      </div>
+    <div class="m-5">
+        <div class="w-100 d-flex">
+            <div class="w-50">
+                <h3>Un compendio que encapsula nuestra dedicación y compromiso hacia
+                    el cannabis medicinal de calidad superior. Fusionamos la experiencia médica
+                    con la potencia del cannabis para crear fitoderivados trazados y testeados.</h3>
+                <h3>Nuestro enfoque es claro: proveer soluciones naturales y eficaces para
+                    el bienestar, comprometidos con la calidad, la seguridad y la salud.</h3>
+            </div>
+            <div class="w-50 d-flex justify-content-center">
+                <h2>ACA VA 1 IMAGEN</h2>
+            </div>
+        </div>
+    </div>
+    <div class="text-center">
+        <h3>NORA representa la sinergia entre la ciencia y la naturaleza, cuidadosamente
+            guiada por profesionales médicos y expertos en la materia. Nuestros fitoderivados
+            son probados y respaldados por la investigación, con el fin de ofrecer a nuestros
+            pacientes una experiencia confiable y auténtica.</h3>
+            <h2 class="titulo">Bienvenidos a Nora: donde la ciencia, la naturaleza y el compromiso se unen para 
+                un bienestar elevado</h2>
+    </div>
+</div>
