--- a/src/app/components/checkout/checkout.component.css
+++ b/src/app/components/checkout/checkout.component.css
@@ -2,3 +2,47 @@ h2 {
     margin: 2rem;
     font-size: 2rem
 }
+
+.buttons {
+    width: 90%;
+}
+
+.mat-fab {
+    position: fixed;
+  bottom: 2rem; /* Ajusta la distancia desde la parte inferior según tus necesidades */
+  left: 2rem;
+  z-index: 10;
+}
+
+.minifab {
+    position: absolute;
+    width: 2rem;
+    height: 2rem;
+    left: 2.7rem;
+    z-index: 10101;
+    opacity: 100%;
+}
+
+.minifabempty {
+  position: absolute;
+  width: 2rem;
+  height: 2rem;
+  left: 2.7rem;
+  top: 1.7rem;
+  z-index: 10101;
+  opacity: 100%;
+}
+
+.imgcartside {
+  width: 4rem;
+  border-radius:1rem;
+  margin-left: 3rem;
+}
+
+.b {
+  margin-left: 1rem;
+}
+
+@media (max-width: 556) {
+
+}
