--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -1,79 +1,44 @@
-<div class="">
-  <div class="d-flex align-items-center">
-    <h2 class="text-white">Checkout</h2>
-    <button mat-raised-button color="accent" class="btn mr-2" (click)="backToCart()">Volver al carrito</button>
-  </div>
-  <mat-stepper [linear]="isLinear" #stepper>
-    <mat-step [stepControl]="firstFormGroup">
-      <form [formGroup]="firstFormGroup" class="d-flex justify-content-around">
-        <ng-template matStepLabel>Completá tus datos</ng-template>
-        <div class="d-flex flex-column w-25">
-        <mat-form-field class="example-full-width">
-          <mat-label>Nombre</mat-label>
-          <input matInput placeholder="Ex. Pizza" value="Sushi">
-        </mat-form-field>
-        <mat-form-field class="example-full-width">
-          <mat-label>Apellido</mat-label>
-          <input matInput placeholder="Ex. Pizza" value="Sushi">
-        </mat-form-field>
-        <mat-form-field class="example-full-width">
-          <mat-label>Dirección</mat-label>
-          <input matInput placeholder="Ex. Pizza" value="Sushi">
-        </mat-form-field>
-      </div>
-      <div class="d-flex flex-column w-25">
-        <mat-form-field class="example-full-width">
-          <mat-label>Email</mat-label>
-          <input matInput placeholder="Ex. Pizza" value="Sushi">
-        </mat-form-field>
-        <mat-form-field class="example-full-width">
-          <mat-label>Teléfono</mat-label>
-          <input matInput placeholder="Ex. Pizza" value="Sushi">
-        </mat-form-field>
-        <mat-form-field class="example-full-width">
-          <mat-label>Favorite food</mat-label>
-          <input matInput placeholder="Ex. Pizza" value="Sushi">
-        </mat-form-field>
-      </div>
-      <div class="d-flex flex-column w-25">
-        <mat-form-field class="example-full-width">
-          <mat-label>País</mat-label>
-          <input matInput placeholder="Ex. Pizza" value="Sushi">
-        </mat-form-field>
-        <mat-form-field class="example-full-width">
-          <mat-label>Provincia</mat-label>
-          <input matInput placeholder="Ex. Pizza" value="Sushi">
-        </mat-form-field>
-        <mat-form-field class="example-full-width">
-          <mat-label>Ciudad</mat-label>
-          <input matInput placeholder="Ex. Pizza" value="Sushi">
-        </mat-form-field>
-      </div>
+<div class="text-white">
+  <h2>Checkout</h2>
+  <hr>
+<mat-vertical-stepper [linear]="isLinear" #stepper color="accent">
+  <mat-step>
+    <form>
+      <ng-template matStepLabel>Revisá tus productos</ng-template>
+      <div class="mt-3 d-flex justify-content-between align-items-center w-100"
+      *ngFor="let itemcart of this.cartSer.cart.items">
+      
+      <div class="d-flex justify-content-center"> 
+        <img class="imgcartside" src="{{itemcart.product.image}}" alt=""> 
+        <button class="minifab b" mat-mini-fab color="accent"><b>{{itemcart.cantidad}}</b></button>
 
-        <div>
-          <button mat-button matStepperNext>Next</button>
-        </div>
-      </form>
-    </mat-step>
-    <mat-step [stepControl]="secondFormGroup" label="Fill out your address">
-      <form [formGroup]="secondFormGroup">
-        <mat-form-field>
-          <mat-label>Address</mat-label>
-          <input matInput formControlName="secondCtrl" placeholder="Ex. 1 Main St, New York, NY" required>
-        </mat-form-field>
-        <div>
-          <button mat-button matStepperPrevious>Back</button>
-          <button mat-button matStepperNext>Next</button>
-        </div>
-      </form>
-    </mat-step>
-    <mat-step>
-      <ng-template matStepLabel>Finaliza tu compra</ng-template>
-      <p>You are now done.</p>
-      <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button (click)="stepper.reset()">Reset</button>
       </div>
-    </mat-step>
-  </mat-stepper>
-</div>
+      <div class="d-flex flex-column text-start w-50"> 
+        <b>{{itemcart.product.name}}</b> 
+        {{itemcart.product.contenido}}
+        {{itemcart.priceconjunto}}
+      </div>
+    </div>
+      <div>
+        <button class="m-3 border" (click)="this.dialogRef.close()" mat-button>Volver</button>
+        <button class="m-3 border" mat-button matStepperNext (click)="generateOrder()">Siguiente</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step [stepControl]="secondFormGroup">
+    <form [formGroup]="secondFormGroup">
+      <ng-template matStepLabel>Ir a pagar</ng-template>
+      <div class="m-0">
+        <h3 class="">Precio final:</h3>
+        <h2 class="">{{this.cartSer.cart.finalPrice.toFixed(2)}}</h2>
+      </div>
+      <div class="w-100 justify-content-center">
+        <button mat-raised-button color="accent" class="m-3" (click)="abrirPago()" [disabled]="!responser">Finalizar compra</button> 
+      </div>     
+      <div>
+        <button class="m-3 border" mat-button matStepperPrevious>Volver</button>
+      </div>
+    </form>
+  </mat-step>
+</mat-vertical-stepper>
+  
