--- a/src/app/views/contacto/contacto.component.html
+++ b/src/app/views/contacto/contacto.component.html
@@ -1,1 +1,29 @@
-<p>contacto works!</p>
+<div class="container">
+
+    <div class="w-100 d-flex ">
+        <h2 class="titulo">Contacto</h2>
+    </div>
+    <div class="w-100 d-flex justify-content-center">
+
+
+
+        <div class="w-50">
+            <form action="" class="d-flex flex-column mt-4">
+                <mat-form-field class="example-full-width" color="accent">
+                    <mat-label>Nombre</mat-label>
+                    <input matInput placeholder="" value="">
+                </mat-form-field>
+                <mat-form-field class="example-full-width" color="accent">
+                    <mat-label>Email</mat-label>
+                    <input matInput placeholder="" value="">
+                </mat-form-field>
+                <mat-form-field class="example-full-width" color="accent">
+                    <mat-label>Mensaje</mat-label>
+                    <textarea matInput placeholder="" rows="5"></textarea>
+                </mat-form-field>
+                <div class="w-100 d-flex justify-content-center">
+                    <button class="w-50 m-3" mat-raised-button>Enviar</button>
+                </div>
+            </form>
+        </div>
+    </div>
