--- a/src/app/views/inicio/inicio.component.css
+++ b/src/app/views/inicio/inicio.component.css
@@ -1,3 +1,16 @@
+h1 {
+    margin-top: 10rem;
+    font-size: 2.6rem;
+    font-weight: 500;
+}
+
+
+
+h3 {
+    font-size: 1.5rem;
+    font-style: italic;
+}
+
 .card {
     width: 44rem;
 }
@@ -9,22 +22,24 @@
 }
 
 .card-img-top {
-    position:relative ;
-    right: 6rem;
-    width: 13rem;
+    width: 100%;
+    height: 14rem;
     border-radius: 1rem;
+    margin: 1rem;
+
 }
 
-.benefits {
-    position: absolute;
-    right: 2.8rem;
-}
 
 .mat-fab {
     position: fixed;
   bottom: 2rem; /* Ajusta la distancia desde la parte inferior según tus necesidades */
   left: 2rem;
   z-index: 1000;
+}
+
+.titulo {
+    font-size: 2.3rem;
+    margin-top: 3rem;
 }
 
 .title {
