--- a/src/app/views/tienda/tienda.component.html
+++ b/src/app/views/tienda/tienda.component.html
@@ -1,16 +1,19 @@
 <div class="container">
 
+    <div class="w-100 d-flex ">
+        <h2 class="titulo">Tienda</h2>
+      </div>
+
     <div class="row card-container w-100 d-flex justify-content-around mt-4">
 
-        <mat-card *ngFor="let product of database.data.products" class="col-md-4 text-center bg-white mt-2 mb-2 text-dark"
+
+
+        <mat-card *ngFor="let product of database.data.products" class="col-md-4 text-center bg-white mt-3 mb-3 text-dark"
             style="width: 18rem;">
             <h2 class="mb-0">{{product.name}}</h2>
             <h5>{{product.contenido}}</h5>
-            <div class="d-flex">
+            <div class="d-flex justify-content-center">
                 <img class="card-img-top" src="{{product.image}}" alt="Card image cap" >
-                <div class="benefits">
-                    <h3>Beneficios:</h3>
-                </div>
             </div>
 
             <div class="card-body">
@@ -18,12 +21,22 @@
                     card's
                     content.</p>
                 <div class="d-flex justify-content-center">
-                    <h6>{{product.price}}</h6>
-                    <h6>{{product.currency}}</h6>
+                    <h2>{{product.price}}</h2>
+                    <h2>{{product.currency}}</h2>
                 </div>
-                <button mat-raised-button class="btn btn-primary mb-1" (click)="addProduct({product, cantidad: 1, priceconjunto: 0})">Añadir al carrito
+                <div class="d-flex flex-column">
+                <button mat-raised-button class="btn btn-primary m-2" (click)="addProduct({product, cantidad: 1, priceconjunto: 0})">Añadir al carrito
                     <mat-icon>add_shopping_cart</mat-icon>
                 </button>
+                <div class="d-flex">
+                    <button mat-raised-button class="w-25 m-1" color="warn" >
+                    <mat-icon>delete</mat-icon>
+                </button>
+                <button mat-raised-button class="w-25 m-1" color="primary" >
+                    <mat-icon>edit</mat-icon>
+                </button>
+            </div>
+            </div>
             </div>
         </mat-card>
 
